# TBDECDTP

./: .gitmodules  CMakeLists.txt
PoC/python2cpp/: main.cpp
PoC/python2cpp/Data/BreastCancer/: preprocessBreastCancer.py
data/Abalone/: data.json  preprocessAbalone.py
data/Balance/: data.json  preprocessBalance.py
data/Glass/: data.json  preprocessGlass.py
data/HayesRoth/: data.json  preprocessHayesRoth.py
data/Hepatitis/: data.json  preprocessHepatitis.py
data/Ionosphere/: data.json  preprocessIonosphere.py
data/Iris/: data.json  preprocessIris.py
poc/python2cpp/: it
poc/python2cpp/Data/BreastCancer/: data.json
src/: main.cpp  qdtree-const.cpp  qdtree-const.hpp  qdtree-input.cpp  qdtree-input.hpp  qdtree-tests.cpp  qdtree-tests.hpp
